# MacPortScanner

./: .eslintrc.js  .gitignore  AUTOMATION_TEST.md  BUILD.md  BUILD_SUCCESS.md  CHANGELOG.md  CI_CD_FIXES.md  DEBUG_REPORT.md  DEVELOPMENT_ROADMAP.md  DEV_TOOLS_SUMMARY.md  EXAMPLES.md  FINAL_CI_CD_STATUS.md  GITHUB_ACTIONS_STATUS.md  INSTALL.md  INSTALLATION.md  LICENSE  Makefile  PUSH_INSTRUCTIONS.md  QUICK_START.md  README.md  RELEASE_GUIDE.md  STABLE_STATE.md  WORKFLOW.md  WORKFLOW_REPORT.md  build-local.sh  build.sh  create-dmg.sh  create_app.sh  debug.sh  dev-build-test.sh  dev-build.sh  fix-version.sh  index.html  jest.config.js  package-lock.json  package.json  prepare-release.sh  quick-build.sh  start.sh  test-app.sh  (+7 more)
.github/workflows/: README.md  auto-release.yml  auto-version.yml  build-check.yml  build-release.yml  release.yml  test.yml
.kiro/specs/port-range-scanning/: design.md  requirements.md  tasks.md
Core/: Cargo.toml
Core/src/: bridge.rs  config.rs  lib.rs  network.rs  results.rs  scanner.rs
Development/: DEVELOPMENT.md  FEATURES.md  Makefile  build.sh  setup.sh
UI/MacPortScanner/: ConfigurationView.swift  ContentView.swift  Info.plist  MacPortScanner.entitlements  MacPortScannerApp.swift  ScanResultView.swift  ScannerBridge.swift  VisualizationView.swift
UI/MacPortScanner.xcodeproj/: project.pbxproj
ico/: MacPortScanner.icns
src/: App.tsx  index.css  main.ts  preload.ts  setupTests.ts
src/components/ui/: PortCounter.tsx  (+3 more)
src/hooks/: usePortValidation.ts
src/lib/: port-parser.ts  port-scanner.ts
src/types/: index.ts  ui.ts
(+3 files in other folders)
