[package]
name = "macportscan-core"
version = "1.0.0"
edition = "2021"
authors = ["MacPortScanner Team"]
description = "High-performance port scanning library optimized for macOS"
license = "MIT"

[lib]
name = "macportscan_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hickory-resolver = { version = "0.24", features = ["dns-over-rustls"] }
cidr = "0.2"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.7"

# macOS specific
libc = "0.2"
core-foundation = "0.9"
system-configuration = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.24"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.release.build-override]
opt-level = 3